<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_content_copy"
        android:title="@string/copy"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/all_select"
        android:title="@string/select_all"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/cut"
        android:title="@string/cut"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/rename"
        android:title="@string/rename"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:visible="false"/>

    <item
        android:id="@+id/compress"
        android:title="@string/compress"
        android:visible="false"/>

    <item
        android:id="@+id/open_with"
        android:title="@string/open_with"/>

    <item
        android:id="@+id/hide"
        android:title="@string/hide"
        android:visible="false"/>

    <item
        android:id="@+id/add_shortcut"
        android:title="@string/add_shortcut"/>

    <item
        android:id="@+id/property"
        android:title="@string/property"/>
</menu>
