<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sdcard"
            android:checked="true"
            android:icon="@drawable/ic_sd_card"
            android:title="@string/sd_card"/>
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_photo_library"
            android:title="@string/photo"/>
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video_library"
            android:title="@string/video"
            android:visible="false"/>
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_library_music"
            android:title="@string/music"
            android:visible="false"/>
        <item
            android:id="@+id/nav_doc"
            android:icon="@drawable/ic_library_doc"
            android:title="@string/document"
            android:visible="false"/>
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_download"
            android:title="@string/download"/>
    </group>

</menu>